tests/output/self_hosted/paren_wrong_close_error.txt
tests/paren_wrong_close_error.oomph:1: error: '(' and ']' don't match

    (]
     ^

